# PyFlightProfiler

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: build.yml
flight_profiler/: client.py  skills_installer.py
flight_profiler/shell/: resolve_bin_path.sh
flight_profiler/shell/mac/: py_bin_base_addr_locate.sh
flight_profiler/skills/: diagnose-memory.md
plugins/flight-profiler/: CLAUDE.md
plugins/flight-profiler/.claude-plugin/: plugin.json
plugins/flight-profiler/commands/: diagnose-exception.md  diagnose-general.md  diagnose-hang.md  diagnose-memory.md  diagnose-slow.md  diagnose-torch.md  diagnose.md
skills/: diagnose-memory.md
